# rapid-rusty

./: .changelog.md.j2  .cz.toml  .editorconfig  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  REUSE.toml  changelog.md
.github/workflows/: build.yml  bumpdevversion.yml  bumpversion.yml  lint.yml
algorithm/: Cargo.toml
algorithm/src/: lib.rs
algorithm/src/tests/: mod.rs  test_simple_laptimer.rs  test_track_detection.rs
algorithm/tests/: test_track_detection.rs
assets/laps/: Oschersleben.csv
common/: Cargo.toml
common/src/: elapsed_time_source.rs  lap.rs  lib.rs  position.rs  session.rs  track.rs
common/src/serde/: date.rs  duration.rs  duration_list.rs  mod.rs  time.rs
common/src/test_helper/: elapsed_test_time_source.rs  mod.rs  session.rs  track.rs
common/src/tests/: mod.rs  test_gnss_position.rs  test_lap.rs  test_position.rs  test_session.rs  test_track.rs
common/tests/: test_gnss_position.rs  test_lap.rs  test_position.rs  test_session.rs  test_track.rs
docs/: main.md
docs/REST/: Session.md
docs/WebSocket/: WebSocket.md
gnss/: Cargo.toml
gnss/src/: constant_source.rs  gpsd.rs  gpsd_source.rs  lib.rs  test_gpsd.rs
gnss/src/tests/: mod.rs  test_constant_source.rs  test_gpsd.rs  test_gpsd_source.rs
module_core/: Cargo.toml
module_core/src/: lib.rs
module_core/src/test_helper/: mod.rs
module_core/src/tests/: mod.rs  test_event_bus.rs
module_core/tests/: test_event_bus.rs
modules/active_session/: Cargo.toml
modules/active_session/src/: lib.rs
modules/active_session/tests/: tests_active_session.rs
modules/gnss/: Cargo.toml
modules/gnss/src/: constant_source.rs  gpsd_source.rs  lib.rs
modules/gnss/tests/: test_constant_source.rs  test_gpsd_source.rs
modules/laptimer/: Cargo.toml
modules/laptimer/src/: lib.rs
modules/laptimer/tests/: test_simple_laptimer.rs
modules/laptimer/tests/util/: laptimer_positions.rs  mod.rs
modules/rest/: Cargo.toml
modules/rest/src/: lib.rs  live_session.rs
modules/rest/tests/: response_request_session_info.json  test_utils.rs  tests_live_session.rs  tests_rest.rs
modules/storage/: Cargo.toml
modules/storage/src/: lib.rs
modules/storage/tests/: test_sessionfs_storage.rs  test_trackfs_storage.rs
modules/storage/tests/helper/: mod.rs
modules/track_detection/: Cargo.toml
modules/track_detection/src/: lib.rs
modules/track_detection/tests/: tests_track_detection.rs
rapid_headless/: Cargo.toml
rapid_headless/src/: main.rs
storage/: Cargo.toml
storage/src/: lib.rs
storage/src/tests/: mod.rs  test_sessionfs_storage.rs  test_trackfs_storage.rs
