[workspace]
resolver = "2"
members = [
    "algorithm",
    "common",
    "module_core",
    "modules/*",
    "rapid_headless",
]

[workspace.package]
version = "0.0.0"
edition = "2024"

[workspace.dependencies]
common = { path = "common" }
module_core = { path = "module_core" }
algorithm = { path = "algorithm" }
active_session = { path = "modules/active_session" }
storage = { path = "modules/storage" }
laptimer = { path = "modules/laptimer" }
gnss = { path = "modules/gnss" }
track-detection = { path = "modules/track_detection" }

tokio = { version = "~1.44", features = ["rt-multi-thread", "time", "sync", "macros", "net", "io-util", "fs"] }
tokio-util = { version = "~0.7", features = ["codec"] }
futures = "0.3"
async-trait = "~0.1"
tracing = "~0.1"
test-log = { version = "~0.2", features = [ "trace" ] }
chrono = { version = "~0.4", features = ["serde"] }
