[package]
name = "gnss"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { workspace = true }
module_core = {workspace = true}

gpsd_proto = "1.0.0"
tokio = { version = "~1.44", features = ["rt", "time", "sync", "macros", "net", "io-util"] }
tokio-util = { version = "~0.7", features = ["codec"] }
futures = "0.3"
serde = "~1.0"
serde_json = "~1.0"
chrono = "~0.4.40"
utm = "0.1.6"
async-trait = "~0.1"
