[package]
name = "module_core"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { workspace = true }

tokio = { version = "~1.44", features = ["rt", "time", "sync", "macros"] }
chrono = { version = "~0.4", features = ["serde"] }
async-trait = "~0.1"
strum = { version = "~0.27" }
strum_macros = { version = "~0.27" }
