[package]
name = "module_core"
version = { workspace = true }
edition.workspace = true

[dependencies]
common = { workspace = true }
tokio.workspace = true
tracing.workspace = true

chrono = { version = "~0.4", features = ["serde"] }
async-trait = "~0.1"
strum = { version = "~0.27" }
strum_macros = { version = "~0.27" }
