[package]
name = "rapid_headless"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
active_session.workspace = true
gnss.workspace =  true
module_core.workspace = true
storage.workspace = true
laptimer.workspace = true
track-detection.workspace = true
tracing.workspace = true
common.workspace = true

tracing-subscriber = { version = "~0.3" }
clap = { version = "~4.5", features = ["derive"] }
csv = { version = "~1.4" }
dirs = { version = "~6.0" }
