[package]
name = "rapid_headless"
version = { workspace = true }
edition.workspace = true

[dependencies]
tokio.workspace = true
active_session.workspace = true
gnss.workspace =  true
module_core.workspace = true
storage.workspace = true
laptimer.workspace = true
track-detection.workspace = true
tracing.workspace = true
common.workspace = true
rest.workspace = true

tracing-subscriber = { version = "~0.3" }
clap = { version = "~4.5", features = ["derive"] }
csv = { version = "~1.4" }
dirs = { version = "~6.0" }
ctrlc = "~3.5"
