[package]
name = "active_session"
version = { workspace = true }
edition.workspace = true

[dependencies]
common.workspace = true
module_core.workspace = true
tracing.workspace = true
test-log.workspace = true
tokio.workspace = true
async-trait.workspace = true
chrono.workspace = true

[dev-dependencies]
test-log.workspace = true
