[package]
name = "laptimer"
version = { workspace = true }
edition.workspace = true

[dependencies]
common = { workspace =true }
module_core = { workspace =true }
algorithm = { workspace =true }
tracing = { workspace =true }
tokio.workspace = true

chrono = { version = "~0.4" }
async-trait = "~0.1"
