[package]
name = "rest"
version.workspace = true
edition.workspace = true

[dependencies]
module_core.workspace = true
async-trait.workspace = true
tracing.workspace = true
tokio.workspace = true
test-log.workspace =  true
common.workspace = true
serde.workspace = true
serde_json.workspace = true

rocket = { version = "~0.5", features = ["json"] }
rocket_ws = { version = "~0.1" }
rand ={ version = "~0.9" }

[dev-dependencies]
reqwest = { version = "~0.12", features = ["json"] }
serial_test = "~2.0"
chrono.workspace = true
tokio-tungstenite = "~0.28"
futures-util = "~0.3"
