[package]
name = "storage"
version = { workspace = true }
edition.workspace = true

[dependencies]
common = { workspace = true }
module_core = { workspace = true }
tracing = { workspace = true }
test-log.workspace =  true
tokio.workspace = true
chrono.workspace = true

tokio-util = { version = "~0.7", features = ["codec"] }
futures = "0.3"
utm = "0.1.6"
async-trait = "~0.1"
